--- a/calculator.css
+++ b/calculator.css
@@ -13,7 +13,7 @@ body {
 }
 
 .screen {
-    width: 97.5%;
+    width: 100%;
     height: 50px;
     border-bottom: 1px solid #ccc;
     text-align: right;
@@ -35,4 +35,20 @@ body {
     width: 100%;
     height: 100%;
     font-size: 20px;
+}
+
+@media screen and (max-width: 600px) {
+    #calculator {
+        width: 80%;
+    }
+
+    .screen {
+        height: 30px;
+        line-height: 30px;
+        font-size: 18px;
+    }
+
+    .buttons button {
+        font-size: 18px;
+    }
 }
