--- a/calculator.css
+++ b/calculator.css
@@ -10,16 +10,21 @@ body {
 #calculator {
     border: 1px solid #ccc;
     background-color: #eee;
-    width: 100%;
 }
 
 .screen {
+    width: 100%;
     height: 50px;
     border-bottom: 1px solid #ccc;
     text-align: right;
     padding-right: 5px;
     line-height: 50px;
     background-color: #ddd;
+    box-sizing: border-box;
+}
+
+.buttons {
+    width: 100%;
 }
 
 .buttons td {
@@ -31,6 +36,7 @@ body {
     width: 100%;
     height: 100%;
     font-size: 20px;
+    box-sizing: border-box;
 }
 
 @media screen and (max-width: 600px) {
