--- a/calculator.css
+++ b/calculator.css
@@ -44,6 +44,10 @@ body {
         width: 80%;
     }
 
+    body {
+    height: 40vh;
+    }
+
     .screen {
         height: 30px;
         line-height: 30px;
