--- a/calculator.css
+++ b/calculator.css
@@ -42,10 +42,11 @@ body {
 @media screen and (max-width: 600px) {
     #calculator {
         width: 80%;
+        height: 100%;
     }
 
     .screen {
-        line-height: 10px;
+        line-height: 40px;
         font-size: 20px;
     }
 
