--- a/calculator.css
+++ b/calculator.css
@@ -15,9 +15,9 @@ body {
 .screen {
     width: 100%;
     height: 50px;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 2px solid #ccc;
     text-align: right;
-    padding-right: 5px;
+    padding: 5px;
     line-height: 50px;
     background-color: #ddd;
     box-sizing: border-box;
@@ -28,7 +28,7 @@ body {
 }
 
 .buttons td {
-    border: 1px solid #ccc;
+    border: 2px solid #ccc;
     padding: 0;
 }
 
